added new style skin custom and added template eventbus to control GUI events

--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -10,6 +10,30 @@
 }
 
 .g3w-form-component_body {
+  .form_editing_relation_input {
+
+    .info_helptext_button {
+      text-align: center;
+      font-size: 0.7em;
+      margin-top: -10px;
+      margin-left: 5px;
+      background-color: rgba(0,0,0,0.1);
+      font-weight: bold;
+      position:absolute;
+      top:0;
+      left:0;
+      width:15px;
+      height:15px;
+      box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+      border: 1px solid #ffffff;
+      border-radius:50%;
+    }
+    font-weight: bold;
+    width: 100%;
+    padding: 5px;
+    background-color: rgba(0,0,0,0.1);
+  }
+
   overflow: hidden;
   clear:both;
   margin-bottom: 10px;
@@ -44,6 +68,16 @@
 }
 
 .g3w-form-component_relations {
+
+  h5.relation_title {
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+
+  .g3w-icon {
+    font-size: 20px;
+  }
+
   margin-bottom: 10px;
   overflow: hidden;
   .attr-label {
