--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -578,3 +578,22 @@
   .controls-inside-v;
 }
 
+.info_mapcontrol_button {
+  text-align: center;
+  margin-top: -5px;
+  margin-left: -15px;
+  font-weight: bold;
+  color: #ffffff;
+  position:absolute;
+  top:0;
+  left:0;
+  width:20px;
+  height:20px;
+  box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+  border: 2px solid #ffffff;
+  border-radius:50%;
+  cursor: pointer;
+}
+
+
+
