--- a/style/less/g3w-skins/blue/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/blue/g3w-mapcontrols.less
@@ -149,5 +149,9 @@
     background-color: @light-blue;
     border-bottom: 1px solid @light-blue;
   }
+
+  .info_mapcontrol_button {
+    background-color: @light-blue;
+  }
 }
 
