--- a/style/less/g3w-skins/green/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/green/g3w-mapcontrols.less
@@ -149,5 +149,9 @@
     background-color: @green;
     border-bottom: 1px solid @green;
   }
+
+  .info_mapcontrol_button {
+    background-color: @green;
+  }
 }
 
