--- a/style/less/g3w-skins/purple/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/purple/g3w-mapcontrols.less
@@ -149,5 +149,9 @@
     background-color: @purple;
     border-bottom: 1px solid @purple;
   }
+
+  .info_mapcontrol_button {
+    background-color: @purple;
+  }
 }
 
