--- a/style/less/g3w-skins/red/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/red/g3w-mapcontrols.less
@@ -149,5 +149,9 @@
     background-color: @red;
     border-bottom: 1px solid @red;
   }
+
+  .info_mapcontrol_button {
+    background-color: @red;
+  }
 }
 
