--- a/style/less/g3w-skins/yellow/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/yellow/g3w-mapcontrols.less
@@ -149,5 +149,9 @@
     background-color: @yellow;
     border-bottom: 1px solid @yellow;
   }
+
+  .info_mapcontrol_button {
+    background-color: @yellow;
+  }
 }
 
