--- a/style/less/g3w-skins/yellow/g3w-queryresults.less
+++ b/style/less/g3w-skins/yellow/g3w-queryresults.less
@@ -1,6 +1,9 @@
 .skin-yellow {
   .queryresults-wrapper{
     .queryresults-container {
+      .queryresults .query_relation_field {
+        background-color: @yellow;
+      }
       ul {
         > li {
           span.key {
