--- a/style/less/g3w-catalog.less
+++ b/style/less/g3w-catalog.less
@@ -220,3 +220,32 @@ Licensed under MIT
     }
   }
 }
+
+#catalog {
+  #toc_layer_help_text {
+    position:relative;
+    border-radius: 2px;
+    padding: 5px;
+    margin:0.8em;
+    white-space: pre-line;
+    background-color: rgba(255,255,255,0.1)
+  }
+  .info_helptext_button {
+    text-align: center;
+    font-size: 0.7em;
+    margin-top: -5px;
+    margin-left: -5px;
+    background-color: #222d32;
+    font-weight: bold;
+    color: #ffffff;
+    position:absolute;
+    top:0;
+    left:0;
+    width:15px;
+    height:15px;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+    border: 1px solid #ffffff;
+    border-radius:50%;
+  }
+}
+
