--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -76,6 +76,11 @@
 
   .g3w-icon {
     font-size: 20px;
+    border-radius: 50%;
+    box-shadow:  0 2px 4px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    -o-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   }
 
   margin-bottom: 10px;
@@ -97,8 +102,11 @@
     border-radius: 5px;
     font-size: 15px !important;
   }
-  .add-link span.disabled {
-    opacity: 0.3;
+  .add-link {
+    margin-top: 5px;
+    span.disabled {
+      opacity: 0.3;
+    }
   }
   .editbtn {
     padding: 3px 3px 3px 3px;
