changes some less files

--- a/style/less/g3w-header.less
+++ b/style/less/g3w-header.less
@@ -1,4 +1,14 @@
 //Navbar toggle button
+
+.main-header {
+  .navbar {
+    box-shadow: 0 3px 15px 0px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 3px 15px 0px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow:0 3px 15px 0px rgba(0, 0, 0, 0.3);
+  }
+}
+
+
 .sidebar-aside-toggle, .controls-aside-toggle {
   position:absolute;
   left:@sidebar-width;
