--- a/style/less/g3w-skins/blue/g3w-tabs-form-query.less
+++ b/style/less/g3w-skins/blue/g3w-tabs-form-query.less
@@ -1,5 +1,10 @@
 .skin-blue {
-  .formquerytabs li:not(.active) > a {
-    color: @light-blue;
+  .group-title {
+    background-color: lighten(@light-blue, 10%);
+  }
+  .formquerytabs {
+    i:not(.active) > a {
+      color: @light-blue;
+    }
   }
 }
