--- a/style/less/g3w-skins/green/g3w-metadata.less
+++ b/style/less/g3w-skins/green/g3w-metadata.less
@@ -1,3 +1,11 @@
-.skin-blue {
-  .metadata-item-tab.general {}
+.skin-green {
+  .metadata-item-tab.general {
+    background-color: @green;
+  }
+  .metadata-nav-tabs > li.active > a, .metadata-nav-tabs > li > a:hover {
+    color: @green !important;
+  }
+  .metadata-nav-tabs > li > a::after {
+    background: @green;
+  }
 }
