--- a/style/less/g3w-skins/green/g3w-tabs-form-query.less
+++ b/style/less/g3w-skins/green/g3w-tabs-form-query.less
@@ -2,5 +2,8 @@
   .formquerytabs li:not(.active) > a {
     color: @green;
   }
+  .group-title {
+    background-color: lighten(@green, 10%);
+  }
 }
 
