--- a/style/less/g3w-skins/purple/g3w-tabs-form-query.less
+++ b/style/less/g3w-skins/purple/g3w-tabs-form-query.less
@@ -2,4 +2,7 @@
   .formquerytabs li:not(.active) > a {
     color: @purple;
   }
+  .group-title {
+    background-color: lighten(@purple, 10%);
+  }
 }
