--- a/style/less/g3w-skins/red/g3w-queryresults.less
+++ b/style/less/g3w-skins/red/g3w-queryresults.less
@@ -1,8 +1,13 @@
 .skin-red {
   .queryresults-wrapper{
     .queryresults-container {
-      .queryresults .query_relation_field {
-        background-color: @red;
+      .queryresults {
+        .query_relation_field_message {
+          color: @red;
+        }
+        .query_relation_field {
+          background-color: @red;
+        }
       }
       ul {
         > li {
