--- a/style/less/admin-lte2-less/header.less
+++ b/style/less/admin-lte2-less/header.less
@@ -51,6 +51,10 @@
     }
     li {
       font-weight: bold;
+      border-right: 1px solid rgba(255,255,255,0.2);
+      &:last-child {
+        border: 0;
+      }
     }
   }
   .navbar-right {
