--- a/style/less/g3w-core.less
+++ b/style/less/g3w-core.less
@@ -58,6 +58,20 @@
   }
 }
 
+.g3w-icon {
+  &:hover {
+    cursor: pointer;
+  }
+
+  padding: 5px;
+  font-size: 1.3em;
+  border-radius: 50%;
+  box-shadow:  0 2px 4px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  -o-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+}
+
 .close-panel-block {
   overflow: hidden;
   line-height: 14px;
@@ -66,9 +80,18 @@
 }
 button.close-panel-button {
   background-color: transparent;
+  border-radius: 50%;
+  box-shadow:  0 2px 4px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  -o-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   &.dark {
     color: white;
     background-color: @sidebar-dark-bg;
+    box-shadow:  0 2px 4px rgba(255,255,255,0.2);
+    -moz-box-shadow: 0 2px 4px rgba(255,255,255,0.2);
+    -webkit-box-shadow: 0 2px 4px rgba(255,255,255,0.2);
+    -o-box-shadow: 0 2px 4px rgba(255,255,255,0.2);
   }
   border: 0px
 }
