--- a/style/less/g3w-editing-panel.less
+++ b/style/less/g3w-editing-panel.less
@@ -19,12 +19,19 @@
   .toolbox .dropdown:hover .dropdown-content {
     display: block;
   }
+
+  .panel-title {
+    font-weight: bold;
+  }
   .editbtn {
     padding: 3px 3px 3px 3px;
     margin: 0px 5px 0px 5px;
     border: 1px solid darken(grey, 15%);
     .border-radius( 5px );
-    .box-shadow();
+    box-shadow:  0 2px 4px rgba(255,255,255, 0.2);
+    -moz-box-shadow: 0 2px 4px rgba(255,255,255, 0.2);
+    -webkit-box-shadow: 0 2px 4px rgba(255,255,255, 0.2);
+    -o-box-shadow: 0 2px 4px rgba(255,255,255, 0.2);
     display: inline-block;
     opacity: .4;
     cursor: not-allowed;
@@ -38,7 +45,12 @@
         background-color: #dddddd;
       }
     }
+    .editing-icon {
+      font-size: 2em;
+      padding: 5px;
+    }
   }
+
   .message {
     margin-top: 5px;
     margin-bottom: 5px;
