--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -74,15 +74,6 @@
     font-weight: bold;
   }
 
-  .g3w-icon {
-    font-size: 20px;
-    border-radius: 50%;
-    box-shadow:  0 2px 4px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-    -o-box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  }
-
   margin-bottom: 10px;
   overflow: hidden;
   .attr-label {
@@ -132,7 +123,8 @@
 
 .g3w-form, .g3w-form-component_footer{
   button{
-    margin: 0px 5px 0px 5px
+    margin: 0px 5px 0px 5px;
+    font-weight: bold;
   }
   .g3w-relationname {
     font-size: 1.2em;
