--- a/style/less/g3w-queryresults.less
+++ b/style/less/g3w-queryresults.less
@@ -11,20 +11,28 @@
       background-color: #ffffff;
     }
 
-    .queryresults .query_relation_field {
-      i {
-        padding:7px;
+    .queryresults {
+      .query_relation_field {
+        i {
+          padding:7px;
+        }
+        display: inline-block;
+        cursor: pointer;
+        color: white;
+        width: 30px;
+        height: 30px;
+        text-align: center;
+        border-radius: 50%;
+        box-shadow:  0 3px 5px rgba(0,0,0,0.5);
+        -moz-box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+        -webkit-box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+        -o-box-shadow: 0 3px 5px rgba(0,0,0,0.5);
       }
-      cursor: pointer;
-      color: white;
-      width: 30px;
-      height: 30px;
-      text-align: center;
-      border-radius: 50%;
-      box-shadow:  0 3px 5px rgba(0,0,0,0.5);
-      -moz-box-shadow: 0 3px 5px rgba(0,0,0,0.5);
-      -webkit-box-shadow: 0 3px 5px rgba(0,0,0,0.5);
-      -o-box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+      .query_relation_field_message {
+        font-weight: bold;
+        margin-left: 5px;
+      }
+
     }
 
     ul {
@@ -44,7 +52,7 @@
         }
         .box-title {
           font-weight: bold;
-          font-size: 1.2em;
+          font-size: 1.4em;
         }
       }
     }
@@ -200,6 +208,13 @@
   td {
     span {
       font-size:1.5em;
+    }
+  }
+  #relationtable {
+    td {
+      span {
+        font-size:1em;
+      }
     }
   }
 }
