--- a/style/less/g3w-skins/blue/g3w-form.less
+++ b/style/less/g3w-skins/blue/g3w-form.less
@@ -10,6 +10,10 @@
       border-top-color: @light-blue
     }
 
+    .input-group-addon {
+      color: @light-blue;
+    }
+
     .bootstrap-filestyle {
       label.btn-primary {
         background-color: @light-blue;
