--- a/style/less/g3w-skins/red/g3w-metadata.less
+++ b/style/less/g3w-skins/red/g3w-metadata.less
@@ -2,4 +2,10 @@
   .metadata-item-tab.general {
     background-color: @red;
   }
+  .metadata-nav-tabs > li.active > a, .metadata-nav-tabs > li > a:hover {
+    color: @red !important;
+  }
+  .metadata-nav-tabs > li > a::after {
+    background: @red;
+  }
 }
