--- a/style/less/g3w-skins/yellow/g3w-form.less
+++ b/style/less/g3w-skins/yellow/g3w-form.less
@@ -9,7 +9,9 @@
     form .box-primary {
       border-top-color: @yellow;
     }
-
+    .input-group-addon {
+      color: @yellow;
+    }
     .bootstrap-filestyle {
       label.btn-primary {
         background-color: @yellow;
