--- a/style/less/g3w-skins/yellow/g3w-metadata.less
+++ b/style/less/g3w-skins/yellow/g3w-metadata.less
@@ -1,3 +1,11 @@
 .skin-yellow {
-  .metadata-item-tab.general {}
+  .metadata-item-tab.general {
+    background-color: @yellow;
+  }
+  .metadata-nav-tabs > li.active > a, .metadata-nav-tabs > li > a:hover {
+    color: @yellow !important;
+  }
+  .metadata-nav-tabs > li > a::after {
+    background: @yellow;
+  }
 }
