added anche changed styles

--- a/style/less/admin-lte2-less/variables.less
+++ b/style/less/admin-lte2-less/variables.less
@@ -13,7 +13,7 @@
 @red:        #dd4b39;  //Danger
 @green:      #00a65a;  //Success
 @aqua:       #00c0ef;  //Info
-@yellow:     #f39c12;  //Warning
+@yellow:     #e99611;//#f39c12;  //Warning
 @blue:       #0073b7;
 @navy:       #001F3F;
 @teal:       #39CCCC;
