--- a/style/less/g3w-queryresults.less
+++ b/style/less/g3w-queryresults.less
@@ -180,8 +180,7 @@
       }
     }
 
-    .box.box-primary {
-      border: 1px solid lightgray;
+   .box-primary {
       border-top-width: 3px;
     }
 
