--- a/style/less/g3w-skins/blue/g3w-queryresults.less
+++ b/style/less/g3w-skins/blue/g3w-queryresults.less
@@ -33,6 +33,10 @@
       .link {
         color: @light-blue;
       }
+      .field_link {
+        background-color: @light-blue !important;
+        border-color: #ffffff;
+      }
       .queryresults-single {
         span.key {
           color: darken(@light-blue,20%);
