--- a/style/less/g3w-skins/green/g3w-queryresults.less
+++ b/style/less/g3w-skins/green/g3w-queryresults.less
@@ -33,6 +33,9 @@
       .link {
         color: @green;
       }
+      .field_link {
+        background-color: @green !important;
+      }
       .queryresults-single {
         span.key {
           color: darken(@green,20%);
