--- a/style/less/g3w-skins/purple/g3w-queryresults.less
+++ b/style/less/g3w-skins/purple/g3w-queryresults.less
@@ -33,6 +33,9 @@
       .link {
         color: @purple;
       }
+      .field_link {
+        background-color: @purple !important;
+      }
       .queryresults-single {
         span.key {
           color: darken(@purple,20%);
