--- a/style/less/g3w-skins/red/g3w-queryresults.less
+++ b/style/less/g3w-skins/red/g3w-queryresults.less
@@ -33,6 +33,9 @@
       .link {
         color: @red;
       }
+      .field_link {
+        background-color: @red !important;
+      }
       .queryresults-single {
         span.key {
           color: darken(@red,20%);
