--- a/style/less/g3w-skins/yellow/g3w-editing-panel.less
+++ b/style/less/g3w-skins/yellow/g3w-editing-panel.less
@@ -7,5 +7,15 @@
       color: darken(@yellow, 80%);
     }
   }
-
+  .g3w-editing-table {
+    .editing_table_title {
+      color: darken(@yellow, 20%);
+    }
+  }
+  .gutter-vertical {
+    background-color: @yellow;
+  }
 }
+
+
+
