--- a/style/less/g3w-skins/yellow/g3w-queryresults.less
+++ b/style/less/g3w-skins/yellow/g3w-queryresults.less
@@ -33,6 +33,9 @@
       .link {
         color: @yellow;
       }
+      .field_link {
+        background-color: @yellow !important;
+      }
       .queryresults-single {
         span.key {
           color: darken(@yellow,20%);
