--- a/style/less/g3w-core.less
+++ b/style/less/g3w-core.less
@@ -159,3 +159,10 @@ button.close-panel-button {
   opacity:0.5!important;
 }
 
+.gutter-vertical {
+  margin-top: -10px;
+  cursor: ns-resize;
+  border: 2px dotted #ffffff;
+}
+
+
