--- a/style/less/g3w-skins/blue/g3w-editing-panel.less
+++ b/style/less/g3w-skins/blue/g3w-editing-panel.less
@@ -7,5 +7,16 @@
       color: darken(@light-blue, 80%);
     }
   }
-
+  .g3w-editing-table {
+    .editing_table_title {
+      color: darken(@light-blue, 20%);
+    }
+  }
+  .gutter-vertical {
+    background-color: @light-blue;
+  }
 }
+
+
+
+
