--- a/style/less/g3w-skins/blue/g3w-form.less
+++ b/style/less/g3w-skins/blue/g3w-form.less
@@ -1,11 +1,11 @@
 .skin-blue {
-  .g3w-form-component_header {
+  #g3wform_header {
     .title {
       color: darken(@light-blue, 20%);
     }
   }
 
-  .g3w-form-component_body {
+  #g3wform_body {
     form .box-primary {
       border-top-color: @light-blue
     }
@@ -25,18 +25,21 @@
     }
   }
 
-  .g3w-form-component_relations {
+  #g3wform_relations {
     h5.relation_title {
       color: @light-blue;
     }
     .g3w-icon {
       color: @light-blue;
     }
-    .tooltip.bottom .tooltip-inner {
+    .tooltip-inner {
       background-color:@light-blue;
     }
     .tooltip.bottom .tooltip-arrow {
       border-bottom-color: @light-blue;
+    }
+    .tooltip.left .tooltip-arrow {
+      border-left-color: @light-blue;
     }
     .relation-editbtn {
       border: 2px solid @light-blue;
@@ -44,7 +47,7 @@
     }
   }
 
-  .g3w-form, .g3w-form-component_footer {
+  .g3w-form, #g3wform_footer {
     .g3w-relationname {
       color: @light-blue;
     }
