--- a/style/less/g3w-skins/blue/g3w-tabs-form-query.less
+++ b/style/less/g3w-skins/blue/g3w-tabs-form-query.less
@@ -2,9 +2,16 @@
   .group-title {
     background-color: lighten(@light-blue, 10%);
   }
-  .formquerytabs {
+  .formquerytabs.nav-tabs  {
     i:not(.active) > a {
       color: @light-blue;
+    }
+    li > a {
+      color: @light-blue;
+    }
+    li.active > a,  li.active > a:focus, .nav-tabs > li.active > a:hover {
+      background-color: @light-blue !important;
+      color: #ffffff;
     }
   }
 }
