--- a/style/less/g3w-skins/green/g3w-editing-panel.less
+++ b/style/less/g3w-skins/green/g3w-editing-panel.less
@@ -7,5 +7,14 @@
       color: darken(@green, 80%);
     }
   }
-
+  .g3w-editing-table {
+    .editing_table_title {
+      color: darken(@green, 20%);
+    }
+  }
+  .gutter-vertical {
+    background-color: @green;
+  }
 }
+
+
