--- a/style/less/g3w-skins/green/g3w-tabs-form-query.less
+++ b/style/less/g3w-skins/green/g3w-tabs-form-query.less
@@ -1,9 +1,18 @@
 .skin-green {
-  .formquerytabs li:not(.active) > a {
-    color: @green;
-  }
   .group-title {
-    background-color: lighten(@green, 10%);
+    background-color: lighten(green, 10%);
+  }
+  .formquerytabs.nav-tabs  {
+    i:not(.active) > a {
+      color: @green;
+    }
+    li > a {
+      color: @green;
+    }
+    li.active > a,  li.active > a:focus, .nav-tabs > li.active > a:hover {
+      background-color: @green !important;
+      color: #ffffff;
+    }
   }
 }
 
