--- a/style/less/g3w-skins/red/g3w-editing-panel.less
+++ b/style/less/g3w-skins/red/g3w-editing-panel.less
@@ -7,5 +7,13 @@
       color: darken(@red, 80%);
     }
   }
-
+  .g3w-editing-table {
+    .editing_table_title {
+      color: darken(@red, 20%);
+    }
+  }
+  .gutter-vertical {
+    background-color: @red;
+  }
 }
+
