--- a/style/less/g3w-skins/red/g3w-tabs-form-query.less
+++ b/style/less/g3w-skins/red/g3w-tabs-form-query.less
@@ -1,8 +1,17 @@
 .skin-red {
-  .formquerytabs li:not(.active) > a {
-    color: @red;
-  }
   .group-title {
     background-color: lighten(@red, 10%);
+  }
+  .formquerytabs.nav-tabs  {
+    i:not(.active) > a {
+      color: @red;
+    }
+    li > a {
+      color: @red;
+    }
+    li.active > a,  li.active > a:focus, .nav-tabs > li.active > a:hover {
+      background-color: @red !important;
+      color: #ffffff;
+    }
   }
 }
