--- a/style/less/g3w-skins/yellow/g3w-tabs-form-query.less
+++ b/style/less/g3w-skins/yellow/g3w-tabs-form-query.less
@@ -1,9 +1,18 @@
 .skin-yellow {
-  .formquerytabs li:not(.active) > a {
-    color: @yellow;
-  }
   .group-title {
     background-color: lighten(@yellow, 10%);
+  }
+  .formquerytabs.nav-tabs  {
+    i:not(.active) > a {
+      color: @yellow;
+    }
+    li > a {
+      color: @yellow;
+    }
+    li.active > a,  li.active > a:focus, .nav-tabs > li.active > a:hover {
+      background-color: @yellow !important;
+      color: #ffffff;
+    }
   }
 }
 
