added anche changed styles

--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -351,6 +351,10 @@
 }
 
 .ol-geocoder ul.gcd-txt-result {
+  li.nominatim-noresults {
+    font-weight: bold;
+    vertical-align: center;
+  };
   position: absolute;
   left: 0;
   width: 296px;
