--- a/style/less/g3w-editing-panel.less
+++ b/style/less/g3w-editing-panel.less
@@ -23,18 +23,37 @@
   .panel-title {
     font-weight: bold;
   }
+  .editing-button {
+    cursor: not-allowed;
+    .editing-icon {
+      background-color: #3a4448;
+      color: #222d32;
+      font-size: 1.8em;
+      padding: 10px;
+      margin: 5px;
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      text-align: center;
+    }
+    &.enabled {
+      .editing-icon {
+        background-color: #ffffff;
+        -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.7);
+        -moz-box-shadow: 0 0 5px rgba(0,0,0,0.7);
+        box-shadow: 0 0 5px rgba(0,0,0,0.7);
+      }
+      cursor: pointer;
+    }
+  }
   .editbtn {
-    padding: 3px 3px 3px 3px;
     margin: 0 5px 0 5px;
-    border: 1px solid darken(grey, 15%);
-    .border-radius( 5px );
-    box-shadow:  0 2px 0 rgba(255,255,255, 0.2);
-    -moz-box-shadow: 0 2px 0 rgba(255,255,255, 0.2);
-    -webkit-box-shadow: 0 2px 0 rgba(255,255,255, 0.2);
-    -o-box-shadow: 0 2px 0 rgba(255,255,255, 0.2);
+    border: 1px solid #3a4448;
+    border-radius: 50%;
+    padding: 10px;
     display: inline-block;
     opacity: .4;
-    cursor: not-allowed;
+
     &.enabled {
       opacity: 1;
       cursor: pointer;
@@ -44,10 +63,6 @@
       &.toggled {
         background-color: #dddddd;
       }
-    }
-    .editing-icon {
-      font-size: 2em;
-      padding: 5px;
     }
   }
 
