--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -1,216 +1,7 @@
-#g3wform_header {
-  overflow: hidden;
-  background-color: #ffffff !important;
-  .title {
-    font-weight: bold;
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 40px;
-  }
-}
-
-#g3wform_body {
-
-  .form-group {
-    margin-bottom: 5px;
-  }
-  .bootstrap-filestyle > input.form-control {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  .form_editing_relation_input {
-    .info_helptext_button {
-      text-align: center;
-      font-size: 0.7em;
-      margin-top: -10px;
-      margin-left: 5px;
-      background-color: rgba(0,0,0,0.1);
-      font-weight: bold;
-      position:absolute;
-      top:0;
-      left:0;
-      width:15px;
-      height:15px;
-      box-shadow: 0 3px 5px rgba(0,0,0,0.5);
-      border: 1px solid #ffffff;
-      border-radius:50%;
-    }
-
-    font-weight: bold;
-    width: 100%;
-    padding: 5px;
-    background-color: rgba(0,0,0,0.1);
-  }
-  .preview {
-    width: 100%;
-    margin-top: 10px;
-    display:flex;
-    align-items: center;
-    .filename {
-      overflow: hidden;
-      margin: 15px;
-      font-weight: bold;
-    }
-    .clearmedia {
-      cursor: pointer;
-      color: red;
-      margin-left: auto;
-    }
-    .previewtype {
-      &:hover{
-        background-color: #efefef;
-      }
-      display: flex;
-      justify-content: center;
-      padding-top: 10px;
-      cursor: pointer;
-      background-color: #ffffff;
-      border-radius: 5px;
-      width: 50px;
-      height: 50px;
-      border: 2px solid;
-      &.pdf {
-        color: @red;
-        border-color:@red;
-      }
-      &.image {
-        color: @yellow;
-        border-color:@yellow;
-      }
-      &.video {
-        color: orange;
-        border-color:orange;
-      }
-      &.unknow {
-        color: grey;
-        border-color:grey;
-      }
-      &.zip {
-        color: saddlebrown;
-        border: 2px solid saddlebrown;
-      }
-      &.text {
-        color: @light-blue;
-        border-color:@light-blue;
-      }
-      &.excel {
-        color: @green;
-        border-color: @green;
-      }
-      &.ppt {
-        color: @purple;
-        border-color: @purple;
-      }
-    }
-  }
-  background-color: #ffffff;
-  overflow-x:hidden ;
-  overflow-y: auto;
-  clear:both;
-  margin-bottom: 10px;
-  .divider {
-    display: block;
-    position: relative;
-    padding: 0px;
-    margin: 10px auto;
-    height: 0;
-    width: 100%;
-    max-height: 0;
-    font-size: 1px;
-    line-height: 0;
-    clear: both;
-    border: none;
-    border-bottom: 1px solid rgba(122, 122, 122, 0.2);
-  }
-}
-
-.input-error-validation {
-  border: 2px solid red!important;
-}
-.error-input-message {
-  color: red;
-}
-
-#g3wform_footer {
-  height: 100px;
-  position: relative;
-  bottom: 5px;
-  width:100%;
-  background-color: #ededed;
-  button {
-    font-weight: bold;
-    margin: 5px;
-  }
-}
-
-#g3wform_relations {
-  overflow-y: auto;
-  overflow-x: hidden;
+.g3wform_body {
   h5.relation_title {
     font-size: 1.2em;
     font-weight: bold;
-  }
-  .preview {
-    width: 100%;
-    display:flex;
-    align-items: center;
-    .filename {
-      overflow: hidden;
-      margin: 15px;
-      font-weight: bold;
-    }
-    .clearmedia {
-      cursor: pointer;
-      color: red;
-      margin-left: auto;
-    }
-    .previewtype {
-      &:hover{
-        background-color: #efefef;
-      }
-      display: flex;
-      justify-content: center;
-      padding-top: 10px;
-      cursor: pointer;
-      background-color: #ffffff;
-      border-radius: 5px;
-      width: 50px;
-      height: 50px;
-      border: 2px solid;
-      &.pdf {
-        color: @red;
-        border-color:@red;
-      }
-      &.image {
-        color: @yellow;
-        border-color:@yellow;
-      }
-      &.video {
-        color: orange;
-        border-color:orange;
-      }
-      &.unknow {
-        color: grey;
-        border-color:grey;
-      }
-      &.zip {
-        color: saddlebrown;
-        border: 2px solid saddlebrown;
-      }
-      &.text {
-        color: @light-blue;
-        border-color:@light-blue;
-      }
-      &.excel {
-        color: @green;
-        border-color: @green;
-      }
-      &.ppt {
-        color: @purple;
-        border-color: @purple;
-      }
-    }
   }
 
   margin-bottom: 10px;
@@ -258,13 +49,181 @@
       }
     }
   }
+  .form-group {
+    margin-bottom: 5px;
+  }
+  .bootstrap-filestyle > input.form-control {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .form_editing_relation_input {
+    .info_helptext_button {
+      text-align: center;
+      font-size: 0.8em;
+      margin-top: -10px;
+      margin-left: 5px;
+      background-color: rgba(0,0,0,0.1);
+      font-weight: bold;
+      position:absolute;
+      top:0;
+      left:0;
+      width:15px;
+      height:15px;
+      box-shadow: 0 3px 5px rgba(0,0,0,0.5);
+      border: 1px solid #ffffff;
+      border-radius:50%;
+    }
+    font-size: 1.2em;
+    font-weight: bold;
+    width: 100%;
+    padding: 10px;
+    background-color: rgba(0,0,0,0.1);
+  }
+  .preview {
+    width: 100%;
+    margin-top: 10px;
+    display:flex;
+    align-items: center;
+    .filename {
+      overflow: hidden;
+      margin: 15px;
+      font-weight: bold;
+    }
+    .clearmedia {
+      .g3w-icon {
+        color: red;
+      }
+      cursor: pointer;
+      margin-left: auto;
+    }
+    .previewtype {
+      &:hover{
+        background-color: #efefef;
+      }
+      display: flex;
+      justify-content: center;
+      padding-top: 10px;
+      cursor: pointer;
+      background-color: #ffffff;
+      border-radius: 5px;
+      width: 50px;
+      height: 50px;
+      border: 2px solid;
+      &.pdf {
+        color: @red;
+        border-color:@red;
+      }
+      &.image {
+        color: @yellow;
+        border-color:@yellow;
+      }
+      &.video {
+        color: orange;
+        border-color:orange;
+      }
+      &.unknow {
+        color: grey;
+        border-color:grey;
+      }
+      &.zip {
+        color: saddlebrown;
+        border: 2px solid saddlebrown;
+      }
+      &.text {
+        color: @light-blue;
+        border-color:@light-blue;
+      }
+      &.excel {
+        color: @green;
+        border-color: @green;
+      }
+      &.ppt {
+        color: @purple;
+        border-color: @purple;
+      }
+    }
+  }
+  .g3wform-relation-table tbody td {
+    vertical-align: bottom;
+    .preview {
+      .previewtype {
+        width: 30px;
+        height: 30px;
+        padding-top: 6px;
+        i, i.fa-2x {
+          font-size: 1em;
+        }
+      }
+    }
+  }
+  overflow-x:hidden ;
+  overflow-y: auto;
+  clear:both;
+  margin-bottom: 10px;
+  .divider {
+    display: block;
+    position: relative;
+    padding: 0px;
+    margin: 10px auto;
+    height: 0;
+    width: 100%;
+    max-height: 0;
+    font-size: 1px;
+    line-height: 0;
+    clear: both;
+    border: none;
+    border-bottom: 1px solid rgba(122, 122, 122, 0.2);
+  }
 }
 
-.g3w-form, .g3w-form-component_footer{
+.input-error-validation {
+  border: 2px solid red!important;
+}
+.error-input-message {
+  color: red;
+}
+
+.g3wform_footer {
+  text-align: center;
+  position:absolute;
+  bottom: 5px;
+  margin: auto;
+  width: 100%;
+  background-color: #ededed;
+  button {
+    font-weight: bold;
+    margin: 5px;
+  }
+}
+
+.g3wform_header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffffff;
+  .title {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+    padding: 10px;
+    overflow: hidden;         /* see note #2 */
+    &.tabs {
+      &:hover {
+        background-color: #ededed;
+      }
+    }
+    font-weight: bold;
+    font-size: 1.4em;
+  }
+}
+
+.g3w-form {
+  background-color: #ffffff;
   button{
-    margin: 0px 5px 0px 5px;
+    margin: 0 5px 0 5px;
     font-weight: bold;
   }
+
   .g3w-relationname {
     font-size: 1.2em;
     border-top: 1px solid darken(@gray,10%);
