--- a/style/less/g3w-skins/blue/g3w-form.less
+++ b/style/less/g3w-skins/blue/g3w-form.less
@@ -1,11 +1,17 @@
 .skin-blue {
-  #g3wform_header {
+  .g3wform_header {
     .title {
+      color: lighten(@light-blue, 20%);
+      &.tabs:hover {
+        border-bottom: 4px solid lighten(@light-blue, 40%);
+      }
+    }
+    .item_selected {
       color: darken(@light-blue, 20%);
+      border-bottom: 3px solid @light-blue !important;
     }
   }
-
-  #g3wform_body {
+  .g3wform_body {
     form .box-primary {
       border-top-color: @light-blue
     }
@@ -23,9 +29,7 @@
         }
       }
     }
-  }
 
-  #g3wform_relations {
     h5.relation_title {
       color: @light-blue;
     }
@@ -47,7 +51,7 @@
     }
   }
 
-  .g3w-form, #g3wform_footer {
+  .g3w-form, .g3wform_footer {
     .g3w-relationname {
       color: @light-blue;
     }
@@ -56,6 +60,14 @@
     }
     .link {
       color: @light-blue;
+    }
+  }
+  .bootstrap-datetimepicker-widget {
+    a > span.glyphicon-remove {
+      color: @light-blue;
+    }
+    .datepicker .active{
+      background-color: @light-blue;
     }
   }
 
