--- a/style/less/g3w-skins/green/g3w-form.less
+++ b/style/less/g3w-skins/green/g3w-form.less
@@ -1,11 +1,18 @@
 .skin-green {
-  #g3wform_header {
+  .g3wform_header {
     .title {
+      color: lighten(@green, 20%);
+      &.tabs:hover {
+        border-bottom: 4px solid lighten(@green, 40%);
+      }
+    }
+    .item_selected {
       color: darken(@green, 20%);
+      border-bottom: 3px solid @green !important;
     }
   }
 
-  #g3wform_body {
+  .g3wform_body {
     form .box-primary {
       border-top-color: @green;
     }
@@ -21,9 +28,7 @@
         }
       }
     }
-  }
 
-  #g3wform_relations {
     h5.relation_title {
       color: @green;
     }
@@ -46,7 +51,7 @@
     }
   }
 
-  .g3w-form, #g3wform_footer{
+  .g3w-form, .g3wform_footer{
     .g3w-relationname {
       color: @green;
     }
@@ -55,6 +60,14 @@
     }
     .link {
       color: @green;
+    }
+  }
+  .bootstrap-datetimepicker-widget {
+    a > span.glyphicon-remove {
+      color: @green
+    }
+    .datepicker .active{
+      background-color: @green;
     }
   }
 
