--- a/style/less/g3w-skins/yellow/g3w-form.less
+++ b/style/less/g3w-skins/yellow/g3w-form.less
@@ -1,11 +1,18 @@
 .skin-yellow {
-  #g3wform_header {
+  .g3wform_header {
     .title {
+      color: lighten(@yellow, 20%);
+      &.tabs:hover {
+        border-bottom: 4px solid lighten(@yellow, 40%);
+      }
+    }
+    .item_selected {
       color: darken(@yellow, 20%);
+      border-bottom: 3px solid @yellow !important;
     }
   }
 
-  #g3wform_body {
+  .g3wform_body {
     form .box-primary {
       border-top-color: @yellow;
     }
@@ -21,9 +28,6 @@
         }
       }
     }
-  }
-
-  #g3wform_relations {
     h5.relation_title {
       color: @yellow;
     }
@@ -46,7 +50,7 @@
     }
   }
 
-  .g3w-form, #g3wform_footer{
+  .g3w-form, .g3wform_footer{
     .g3w-relationname {
       color: @yellow;
     }
@@ -55,6 +59,14 @@
     }
     .link {
       color: @yellow;
+    }
+  }
+  .bootstrap-datetimepicker-widget {
+    a > span.glyphicon-remove {
+      color: @yellow;
+    }
+    .datepicker .active{
+      background-color: @yellow;
     }
   }
 
