remove unuseful libraries

--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -315,6 +315,10 @@
   outline: none;
 }
 
+.ol-geocoder #gcd-input-query {
+  font-weight: bold;
+}
+
 .ol-geocoder .gcd-txt-reset {
   position: absolute;
   z-index: 100;
