--- a/style/less/g3w-mapcontrols.less
+++ b/style/less/g3w-mapcontrols.less
@@ -264,7 +264,7 @@
   width: 25em;
   max-width: 300px;
   height: 4.375em;
-  top: 6px;
+  top: 7px;
   left: 40px;
   @media (max-width: @screen-xs-max) {
     left: 0;
@@ -531,6 +531,10 @@
   flex-wrap: wrap;
   z-index: 100;
   display: flex;
+  .tooltip {
+    font-weight: bold;
+    font-size: 1em;
+  }
   .ol-zoom-extent {
     top:0;
     left:0;
