--- a/style/less/g3w-skins/blue/g3w-queryresults.less
+++ b/style/less/g3w-skins/blue/g3w-queryresults.less
@@ -1,4 +1,9 @@
 .skin-blue {
+  .back-btn {
+    .back-link {
+      color: @light-blue;
+    }
+  }
   .queryresults-wrapper{
     .queryresults-container {
       .queryresults {
