--- a/style/less/g3w-skins/green/g3w-form.less
+++ b/style/less/g3w-skins/green/g3w-form.less
@@ -1,6 +1,9 @@
 .skin-green {
   .g3wform_header {
     .title {
+      &.one {
+        color: darken(@green, 20%);
+      }
       color: lighten(@green, 20%);
       &.tabs:hover {
         border-bottom: 4px solid lighten(@green, 40%);
@@ -15,6 +18,11 @@
   .g3wform_body {
     form .box-primary {
       border-top-color: @green;
+    }
+    .form-control {
+      &:focus {
+        border-color: @green;
+      }
     }
     .input-group-addon {
       color: @green;
