--- a/style/less/g3w-skins/green/g3w-queryresults.less
+++ b/style/less/g3w-skins/green/g3w-queryresults.less
@@ -1,4 +1,9 @@
 .skin-green {
+  .back-btn {
+    .back-link {
+      color: @green;
+    }
+  }
   .queryresults-wrapper{
     .queryresults-container {
       .queryresults {
@@ -35,6 +40,7 @@
       }
       .field_link {
         background-color: @green !important;
+        border-color: @green !important;
       }
       .queryresults-single {
         span.key {
