--- a/style/less/g3w-skins/purple/g3w-mapcontrols.less
+++ b/style/less/g3w-skins/purple/g3w-mapcontrols.less
@@ -1,4 +1,15 @@
 .skin-purple {
+  .g3w-map-controls {
+    .tooltip-inner {
+      background-color:@purple;
+    }
+    .tooltip.bottom .tooltip-arrow {
+      border-bottom-color: @purple;
+    }
+    .tooltip.left .tooltip-arrow {
+      border-left-color: @purple;
+    }
+  }
   .ol-control, .ol-custom-overviewmap {
     button {
       color: #fff;
@@ -78,7 +89,7 @@
   }
 
   .ol-geocoder .gcd-txt-input {
-    border: 2px solid @purple;
+    border: 3px solid @purple;
   }
 
   .ol-geocoder .gcd-txt-reset::after {
