changed andd added some styles

--- a/style/less/g3w-queryresults.less
+++ b/style/less/g3w-queryresults.less
@@ -148,6 +148,20 @@
         }
       }
     }
+    tr.featurebox-header-open + .featurebox-body  {
+      > td > div, td > table {
+        border-radius: 3px;
+        border: 1px solid;
+        padding: 3px;
+      }
+      > td > table {
+        border-collapse: separate;
+      }
+
+      > td > table td, td > table th {
+        padding: 3px;
+      }
+    }
 
     .featurebox-body {
       tbody {
