--- a/style/less/g3w-form.less
+++ b/style/less/g3w-form.less
@@ -3,14 +3,6 @@
     border-bottom:none;
   }
 
-  .relation_tool {
-    margin-right: 10px;
-    cursor: pointer;
-    border-radius: 3px;
-    -ms-filter: drop-shadow(0 0 5px rgba(0,0,0,0.2));
-    filter: drop-shadow(0 0 5px rgba(0,0,0,0.2));
-  }
-
   h5.relation_title {
     font-size: 1.2em;
     font-weight: bold;
@@ -42,11 +34,10 @@
     }
   }
   .editbtn {
-    padding: 3px 3px 3px 3px;
-    margin: 0px 5px 0px 5px;
+    padding: 10px;
+    margin:2px;
     border: 1px solid darken(grey, 15%);
-    .border-radius( 5px );
-    .box-shadow();
+    border-radius: 50%;
     display: inline-block;
     opacity: .4;
     cursor: not-allowed;
@@ -54,7 +45,7 @@
       opacity: 1;
       cursor: pointer;
       &:hover {
-        //.box-shadow(0px,0px,1px);
+        background-color: #dddddd;
       }
       &.toggled {
         background-color: #dddddd;
