--- a/style/less/g3w-skins/purple/g3w-queryresults.less
+++ b/style/less/g3w-skins/purple/g3w-queryresults.less
@@ -69,6 +69,12 @@
         }
       }
 
+      tr.featurebox-header-open + .featurebox-body  {
+        td > div, td > table {
+          border-color: lighten(@purple, 30%);
+        }
+      }
+
       .featurebox-body {
         .action-buttons-container {
           background-color: @purple;
