--- a/style/less/g3w-skins/red/g3w-viewport.less
+++ b/style/less/g3w-skins/red/g3w-viewport.less
@@ -17,6 +17,13 @@
         color: darken(@red, 20%);
       }
     }
+    #g3w-view-content {
+      #layer_attribute_table {
+        tbody tr.feature_attribute.selected {
+          background: lighten(@red, 30%) !important;
+        }
+      }
+    }
   }
 }
 
