change query reaults less file added law button

--- a/style/less/g3w-skins/blue/g3w-queryresults.less
+++ b/style/less/g3w-skins/blue/g3w-queryresults.less
@@ -79,6 +79,9 @@
       .box.box-primary {
         border-top-color: @light-blue;
       }
+      .law-button {
+        background-color: @light-blue !important;
+      }
     }
   }
 
