--- a/style/less/g3w-skins/green/g3w-queryresults.less
+++ b/style/less/g3w-skins/green/g3w-queryresults.less
@@ -84,6 +84,9 @@
       .box.box-primary {
         border-top-color: @green;
       }
+      .law-button {
+        background-color: @green !important;
+      }
     }
   }
 
