--- a/style/less/g3w-skins/purple/g3w-queryresults.less
+++ b/style/less/g3w-skins/purple/g3w-queryresults.less
@@ -84,6 +84,9 @@
       .box.box-primary {
         border-top-color: @purple;
       }
+      .law-button {
+        background-color: @purple !important;
+      }
     }
   }
 
